--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<script type="module" src="/works.js"></script>
 </head>
 <body>
 <header>
@@ -33,6 +34,15 @@
 			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
 			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 		</article>
+	</section>
+	<section class="filtres">
+		<button class="btn-all">Tout</button>
+		
+		<button class="btn-object">Objet</button>
+		
+		<button class="btn-appartement">Appartement</button>
+		
+		<button class="btn-hotels">Hotels et restaurant</button>
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
