ajout de la page login et quelque modification de js et css

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
+			<li><a href="login.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -35,19 +35,19 @@
 			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 		</article>
 	</section>
-	<section class="filtres">
-		<button class="btn-all">Tout</button>
-		
-		<button class="btn-object">Objet</button>
-		
-		<button class="btn-appartement">Appartement</button>
-		
-		<button class="btn-hotels">Hotels et restaurant</button>
-	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<div class="filtres">
+			<button class="btn btn-all">Tout</button>
+			
+			<button class="btn btn-object">Objet</button>
+			
+			<button class="btn btn-appartement">Appartement</button>
+			
+			<button class="btn btn-hotels">Hotels et restaurant</button>
+		</div>
 		<div class="gallery">
-			<figure>
+			<!-- <figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 				<figcaption>Abajour Tahina</figcaption>
 			</figure>
@@ -90,7 +90,7 @@
 			<figure>
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure>
+			</figure> -->
 		</div>
 	</section>
 	<section id="contact">
@@ -117,3 +117,4 @@
 </footer>
 </body>
 </html>
+X
