--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -36,7 +36,21 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<h2>Mes Projets</h2> <a href="#modale" class="js-modal"> modifier</a>
+		<aside id="modale" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display: none;">
+			<div class="modal-wrapper">
+				
+				<button class="js-modal-close">fermer</button>
+				<h1 id="titlemodal">galerie Photo</h1>
+				<div class="gallery-modal">
+					<figure>
+						<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
+						<figcaption>Abajour Tahina</figcaption>
+					</figure>
+							
+				</div>
+			</div>
+		</aside>
 		<div class="filtres">
 			<button class="btn btn-all">Tout</button>
 			
