--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,14 +51,14 @@
 			</div>
 		</aside>
 		
-		<aside id="modale2" class="modal2" aria-hidden="true" role="dialog" aria-labelledby="titlemodal2" style="display: none;">
-			<div class="modal-wrapper2">
+		<aside id="modale2" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display: none;">
+			<div class="modal-wrapper">
 				
 				<button class="js-modal-close"><i class="fa-solid fa-xmark"></i></button>
 				<button class="js-modal-back"><i class="fa-solid fa-arrow-left"></i></button>
-				<h1 id="titlemodal2">Log In</h1>
+				<h1 id="titlemodal">Log In</h1>
 				
-				<form action="#" method="post">
+				<form action="#" method="post" class="image-form">
 					<div class="input-image">
 						<i class="fa-regular fa-image "></i>
 						<input type="image" name="images" id="image" value="+ Ajouter photo">	
