--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,7 +51,7 @@
 			</div>
 		</aside>
 		
-		<aside id="modale2" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display: none;">
+		<!-- <aside id="modale2" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display: none;">
 			<div class="modal-wrapper">
 				
 				<button class="js-modal-close"><i class="fa-solid fa-xmark"></i></button>
@@ -79,7 +79,7 @@
 					<input type="submit" value="valider" class="js-modal CFO">
 				</form>			
 			</div>
-		</aside>
+		</aside> -->
 		<div class="filtres">
 			<button class="btn btn-all">Tout</button>
 			
