--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -26,12 +26,13 @@
 <main>
     <section id="contact">
 		<h2>Log In</h2>
-		<form action="#" method="post">
+		<form action="index.html" method="post">
             <label for="email">Email</label>
 			<input type="email" name="email" id="email">
 			<label for="password">Mot de passe</label>
 			<input type="password" name="password" id="password">
-			<input type="submit" value="se connecter">
+			<input type="submit" value="se connecter" onClick="myFunction()">
+			
 		</form>
 	</section>
 </main>
