--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -51,8 +51,8 @@
 			</div>
 		</aside>
 		
-		<!-- <aside id="modale2" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display: none;">
-			<div class="modal-wrapper">
+		<aside id="modale2" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display: none;">
+			<div class="modal-wrapper js-modal-stop">
 				
 				<button class="js-modal-close"><i class="fa-solid fa-xmark"></i></button>
 				<button class="js-modal-back"><i class="fa-solid fa-arrow-left"></i></button>
@@ -79,7 +79,7 @@
 					<input type="submit" value="valider" class="js-modal CFO">
 				</form>			
 			</div>
-		</aside> -->
+		</aside>
 		<div class="filtres">
 			<button class="btn btn-all">Tout</button>
 			
