--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -31,7 +31,7 @@
 			<input type="email" name="email" id="email">
 			<label for="password">Mot de passe</label>
 			<input type="password" name="password" id="password">
-			<input type="submit" value="se connecter" onClick="myFunction()">
+			<input type="submit" value="se connecter">
 			
 		</form>
 	</section>
